--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-highlight-words": "^0.16.0",
+    "react-resizable": "^1.11.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3"
   },
